Fixes dropdown z-index

--- a/src/styles/components/Header.module.scss
+++ b/src/styles/components/Header.module.scss
@@ -155,6 +155,7 @@
 
 .dropdown {
   position: absolute;
+  z-index: 99;
   right: -25px;
   top: 50px;
   width: 160px;
